libqt6c/src/libqregularexpression.hpp

typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionMatch QRegularExpressionMatch;
typedef struct QRegularExpressionMatchIterator QRegularExpressionMatchIterator;
QRegularExpressionMatch* QRegularExpressionMatch_new();
QRegularExpressionMatch* QRegularExpressionMatch_new2(const QRegularExpressionMatch* match);
void QRegularExpressionMatch_OperatorAssign(QRegularExpressionMatch* self, const QRegularExpressionMatch* match);
void QRegularExpressionMatch_Swap(QRegularExpressionMatch* self, QRegularExpressionMatch* other);
QRegularExpression* QRegularExpressionMatch_RegularExpression(const QRegularExpressionMatch* self);
int QRegularExpressionMatch_MatchType(const QRegularExpressionMatch* self);
int QRegularExpressionMatch_MatchOptions(const QRegularExpressionMatch* self);
bool QRegularExpressionMatch_HasMatch(const QRegularExpressionMatch* self);
bool QRegularExpressionMatch_HasPartialMatch(const QRegularExpressionMatch* self);
bool QRegularExpressionMatch_IsValid(const QRegularExpressionMatch* self);
int QRegularExpressionMatch_LastCapturedIndex(const QRegularExpressionMatch* self);
bool QRegularExpressionMatch_HasCaptured(const QRegularExpressionMatch* self, const libqt_string name);
bool QRegularExpressionMatch_HasCaptured3(const QRegularExpressionMatch* self, int nth);
libqt_string QRegularExpressionMatch_Captured(const QRegularExpressionMatch* self);
libqt_string QRegularExpressionMatch_Captured2(const QRegularExpressionMatch* self, const libqt_string name);
QStringList QRegularExpressionMatch_CapturedTexts(const QRegularExpressionMatch* self);
ptrdiff_t QRegularExpressionMatch_CapturedStart(const QRegularExpressionMatch* self);
ptrdiff_t QRegularExpressionMatch_CapturedLength(const QRegularExpressionMatch* self);
ptrdiff_t QRegularExpressionMatch_CapturedEnd(const QRegularExpressionMatch* self);
ptrdiff_t QRegularExpressionMatch_CapturedStart2(const QRegularExpressionMatch* self, const libqt_string name);
ptrdiff_t QRegularExpressionMatch_CapturedLength2(const QRegularExpressionMatch* self, const libqt_string name);
ptrdiff_t QRegularExpressionMatch_CapturedEnd2(const QRegularExpressionMatch* self, const libqt_string name);
libqt_string QRegularExpressionMatch_Captured1(const QRegularExpressionMatch* self, int nth);
ptrdiff_t QRegularExpressionMatch_CapturedStart1(const QRegularExpressionMatch* self, int nth);
ptrdiff_t QRegularExpressionMatch_CapturedLength1(const QRegularExpressionMatch* self, int nth);
ptrdiff_t QRegularExpressionMatch_CapturedEnd1(const QRegularExpressionMatch* self, int nth);
void QRegularExpressionMatch_Delete(QRegularExpressionMatch* self);
QRegularExpressionMatchIterator* QRegularExpressionMatchIterator_new();
QRegularExpressionMatchIterator* QRegularExpressionMatchIterator_new2(const QRegularExpressionMatchIterator* iterator);
void QRegularExpressionMatchIterator_OperatorAssign(QRegularExpressionMatchIterator* self, const QRegularExpressionMatchIterator* iterator);
void QRegularExpressionMatchIterator_Swap(QRegularExpressionMatchIterator* self, QRegularExpressionMatchIterator* other);
bool QRegularExpressionMatchIterator_IsValid(const QRegularExpressionMatchIterator* self);
bool QRegularExpressionMatchIterator_HasNext(const QRegularExpressionMatchIterator* self);
QRegularExpressionMatch* QRegularExpressionMatchIterator_Next(QRegularExpressionMatchIterator* self);
QRegularExpressionMatch* QRegularExpressionMatchIterator_PeekNext(const QRegularExpressionMatchIterator* self);
QRegularExpression* QRegularExpressionMatchIterator_RegularExpression(const QRegularExpressionMatchIterator* self);
int QRegularExpressionMatchIterator_MatchType(const QRegularExpressionMatchIterator* self);
int QRegularExpressionMatchIterator_MatchOptions(const QRegularExpressionMatchIterator* self);
void QRegularExpressionMatchIterator_Delete(QRegularExpressionMatchIterator* self);