QtBeef/src/Qt/qregularexpression.bf

extension CQt
{
	[LinkName("QRegularExpressionMatch_new")]
	public static extern QRegularExpressionMatch_Ptr QRegularExpressionMatch_new();
	[LinkName("QRegularExpressionMatch_new2")]
	public static extern QRegularExpressionMatch_Ptr QRegularExpressionMatch_new2(void** match);
	[LinkName("QRegularExpressionMatch_Delete")]
	public static extern void QRegularExpressionMatch_Delete(QRegularExpressionMatch_Ptr self);
	[LinkName("QRegularExpressionMatch_OperatorAssign")]
	public static extern void QRegularExpressionMatch_OperatorAssign(void* self, void** match);
	[LinkName("QRegularExpressionMatch_Swap")]
	public static extern void QRegularExpressionMatch_Swap(void* self, void** other);
	[LinkName("QRegularExpressionMatch_RegularExpression")]
	public static extern void* QRegularExpressionMatch_RegularExpression(void* self);
	[LinkName("QRegularExpressionMatch_MatchType")]
	public static extern QRegularExpression_MatchType QRegularExpressionMatch_MatchType(void* self);
	[LinkName("QRegularExpressionMatch_MatchOptions")]
	public static extern void* QRegularExpressionMatch_MatchOptions(void* self);
	[LinkName("QRegularExpressionMatch_HasMatch")]
	public static extern bool QRegularExpressionMatch_HasMatch(void* self);
	[LinkName("QRegularExpressionMatch_HasPartialMatch")]
	public static extern bool QRegularExpressionMatch_HasPartialMatch(void* self);
	[LinkName("QRegularExpressionMatch_IsValid")]
	public static extern bool QRegularExpressionMatch_IsValid(void* self);
	[LinkName("QRegularExpressionMatch_LastCapturedIndex")]
	public static extern c_int QRegularExpressionMatch_LastCapturedIndex(void* self);
	[LinkName("QRegularExpressionMatch_HasCaptured")]
	public static extern bool QRegularExpressionMatch_HasCaptured(void* self, libqt_string name);
	[LinkName("QRegularExpressionMatch_HasCaptured3")]
	public static extern bool QRegularExpressionMatch_HasCaptured3(void* self, c_int nth);
	[LinkName("QRegularExpressionMatch_Captured")]
	public static extern libqt_string QRegularExpressionMatch_Captured(void* self);
	[LinkName("QRegularExpressionMatch_Captured2")]
	public static extern libqt_string QRegularExpressionMatch_Captured2(void* self, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedTexts")]
	public static extern void* QRegularExpressionMatch_CapturedTexts(void* self);
	[LinkName("QRegularExpressionMatch_CapturedStart")]
	public static extern void* QRegularExpressionMatch_CapturedStart(void* self);
	[LinkName("QRegularExpressionMatch_CapturedLength")]
	public static extern void* QRegularExpressionMatch_CapturedLength(void* self);
	[LinkName("QRegularExpressionMatch_CapturedEnd")]
	public static extern void* QRegularExpressionMatch_CapturedEnd(void* self);
	[LinkName("QRegularExpressionMatch_CapturedStart2")]
	public static extern void* QRegularExpressionMatch_CapturedStart2(void* self, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedLength2")]
	public static extern void* QRegularExpressionMatch_CapturedLength2(void* self, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedEnd2")]
	public static extern void* QRegularExpressionMatch_CapturedEnd2(void* self, libqt_string name);
	[LinkName("QRegularExpressionMatch_Captured1")]
	public static extern libqt_string QRegularExpressionMatch_Captured1(void* self, c_int nth);
	[LinkName("QRegularExpressionMatch_CapturedStart1")]
	public static extern void* QRegularExpressionMatch_CapturedStart1(void* self, c_int nth);
	[LinkName("QRegularExpressionMatch_CapturedLength1")]
	public static extern void* QRegularExpressionMatch_CapturedLength1(void* self, c_int nth);
	[LinkName("QRegularExpressionMatch_CapturedEnd1")]
	public static extern void* QRegularExpressionMatch_CapturedEnd1(void* self, c_int nth);
}
class QRegularExpressionMatch : IQRegularExpressionMatch
{
	private QRegularExpressionMatch_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QRegularExpressionMatch_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QRegularExpressionMatch_new();
	}
	public this(IQRegularExpressionMatch match)
	{
		this.ptr = CQt.QRegularExpressionMatch_new2((.)match?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QRegularExpressionMatch_Delete(this.ptr);
	}
	public void Swap(IQRegularExpressionMatch other)
	{
		CQt.QRegularExpressionMatch_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public QRegularExpression_Ptr RegularExpression()
	{
		return QRegularExpression_Ptr(CQt.QRegularExpressionMatch_RegularExpression((.)this.ptr.Ptr));
	}
	public QRegularExpression_MatchType MatchType()
	{
		return CQt.QRegularExpressionMatch_MatchType((.)this.ptr.Ptr);
	}
	public void* MatchOptions()
	{
		return CQt.QRegularExpressionMatch_MatchOptions((.)this.ptr.Ptr);
	}
	public bool HasMatch()
	{
		return CQt.QRegularExpressionMatch_HasMatch((.)this.ptr.Ptr);
	}
	public bool HasPartialMatch()
	{
		return CQt.QRegularExpressionMatch_HasPartialMatch((.)this.ptr.Ptr);
	}
	public bool IsValid()
	{
		return CQt.QRegularExpressionMatch_IsValid((.)this.ptr.Ptr);
	}
	public c_int LastCapturedIndex()
	{
		return CQt.QRegularExpressionMatch_LastCapturedIndex((.)this.ptr.Ptr);
	}
	public bool HasCaptured(String name)
	{
		return CQt.QRegularExpressionMatch_HasCaptured((.)this.ptr.Ptr, libqt_string(name));
	}
	public bool HasCaptured3(c_int nth)
	{
		return CQt.QRegularExpressionMatch_HasCaptured3((.)this.ptr.Ptr, nth);
	}
	public void Captured(String outStr)
	{
		CQt.QRegularExpressionMatch_Captured((.)this.ptr.Ptr);
	}
	public void Captured2(String outStr, String name)
	{
		CQt.QRegularExpressionMatch_Captured2((.)this.ptr.Ptr, libqt_string(name));
	}
	public void* CapturedTexts()
	{
		return CQt.QRegularExpressionMatch_CapturedTexts((.)this.ptr.Ptr);
	}
	public void* CapturedStart()
	{
		return CQt.QRegularExpressionMatch_CapturedStart((.)this.ptr.Ptr);
	}
	public void* CapturedLength()
	{
		return CQt.QRegularExpressionMatch_CapturedLength((.)this.ptr.Ptr);
	}
	public void* CapturedEnd()
	{
		return CQt.QRegularExpressionMatch_CapturedEnd((.)this.ptr.Ptr);
	}
	public void* CapturedStart2(String name)
	{
		return CQt.QRegularExpressionMatch_CapturedStart2((.)this.ptr.Ptr, libqt_string(name));
	}
	public void* CapturedLength2(String name)
	{
		return CQt.QRegularExpressionMatch_CapturedLength2((.)this.ptr.Ptr, libqt_string(name));
	}
	public void* CapturedEnd2(String name)
	{
		return CQt.QRegularExpressionMatch_CapturedEnd2((.)this.ptr.Ptr, libqt_string(name));
	}
	public void Captured1(String outStr, c_int nth)
	{
		CQt.QRegularExpressionMatch_Captured1((.)this.ptr.Ptr, nth);
	}
	public void* CapturedStart1(c_int nth)
	{
		return CQt.QRegularExpressionMatch_CapturedStart1((.)this.ptr.Ptr, nth);
	}
	public void* CapturedLength1(c_int nth)
	{
		return CQt.QRegularExpressionMatch_CapturedLength1((.)this.ptr.Ptr, nth);
	}
	public void* CapturedEnd1(c_int nth)
	{
		return CQt.QRegularExpressionMatch_CapturedEnd1((.)this.ptr.Ptr, nth);
	}
}
interface IQRegularExpressionMatch : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QRegularExpressionMatchIterator
// --------------------------------------------------------------
[CRepr]
struct QRegularExpressionMatchIterator_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QRegularExpressionMatchIterator_new")]
	public static extern QRegularExpressionMatchIterator_Ptr QRegularExpressionMatchIterator_new();
	[LinkName("QRegularExpressionMatchIterator_new2")]
	public static extern QRegularExpressionMatchIterator_Ptr QRegularExpressionMatchIterator_new2(void** iterator);
	[LinkName("QRegularExpressionMatchIterator_Delete")]
	public static extern void QRegularExpressionMatchIterator_Delete(QRegularExpressionMatchIterator_Ptr self);
	[LinkName("QRegularExpressionMatchIterator_OperatorAssign")]
	public static extern void QRegularExpressionMatchIterator_OperatorAssign(void* self, void** iterator);
	[LinkName("QRegularExpressionMatchIterator_Swap")]
	public static extern void QRegularExpressionMatchIterator_Swap(void* self, void** other);
	[LinkName("QRegularExpressionMatchIterator_IsValid")]
	public static extern bool QRegularExpressionMatchIterator_IsValid(void* self);
	[LinkName("QRegularExpressionMatchIterator_HasNext")]
	public static extern bool QRegularExpressionMatchIterator_HasNext(void* self);
	[LinkName("QRegularExpressionMatchIterator_Next")]
	public static extern void* QRegularExpressionMatchIterator_Next(void* self);
	[LinkName("QRegularExpressionMatchIterator_PeekNext")]
	public static extern void* QRegularExpressionMatchIterator_PeekNext(void* self);
	[LinkName("QRegularExpressionMatchIterator_RegularExpression")]
	public static extern void* QRegularExpressionMatchIterator_RegularExpression(void* self);
	[LinkName("QRegularExpressionMatchIterator_MatchType")]
	public static extern QRegularExpression_MatchType QRegularExpressionMatchIterator_MatchType(void* self);
	[LinkName("QRegularExpressionMatchIterator_MatchOptions")]
	public static extern void* QRegularExpressionMatchIterator_MatchOptions(void* self);
}
class QRegularExpressionMatchIterator : IQRegularExpressionMatchIterator
{
	private QRegularExpressionMatchIterator_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QRegularExpressionMatchIterator_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QRegularExpressionMatchIterator_new();
	}
	public this(IQRegularExpressionMatchIterator iterator)
	{
		this.ptr = CQt.QRegularExpressionMatchIterator_new2((.)iterator?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QRegularExpressionMatchIterator_Delete(this.ptr);
	}
	public void Swap(IQRegularExpressionMatchIterator other)
	{
		CQt.QRegularExpressionMatchIterator_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public bool IsValid()
	{
		return CQt.QRegularExpressionMatchIterator_IsValid((.)this.ptr.Ptr);
	}
	public bool HasNext()
	{
		return CQt.QRegularExpressionMatchIterator_HasNext((.)this.ptr.Ptr);
	}
	public QRegularExpressionMatch_Ptr Next()
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpressionMatchIterator_Next((.)this.ptr.Ptr));
	}
	public QRegularExpressionMatch_Ptr PeekNext()
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpressionMatchIterator_PeekNext((.)this.ptr.Ptr));
	}
	public QRegularExpression_Ptr RegularExpression()
	{
		return QRegularExpression_Ptr(CQt.QRegularExpressionMatchIterator_RegularExpression((.)this.ptr.Ptr));
	}
	public QRegularExpression_MatchType MatchType()
	{
		return CQt.QRegularExpressionMatchIterator_MatchType((.)this.ptr.Ptr);
	}
	public void* MatchOptions()
	{
		return CQt.QRegularExpressionMatchIterator_MatchOptions((.)this.ptr.Ptr);
	}
}
interface IQRegularExpressionMatchIterator : IQtObjectInterface
{
}
[AllowDuplicates]
enum QRegularExpression_PatternOption
{
	NoPatternOption = 0,
	CaseInsensitiveOption = 1,
	DotMatchesEverythingOption = 2,
	MultilineOption = 4,
	ExtendedPatternSyntaxOption = 8,
	InvertedGreedinessOption = 16,
	DontCaptureOption = 32,
	UseUnicodePropertiesOption = 64,
}
[AllowDuplicates]
enum QRegularExpression_MatchType
{
	NormalMatch = 0,
	PartialPreferCompleteMatch = 1,
	PartialPreferFirstMatch = 2,
	NoMatch = 3,
}
[AllowDuplicates]
enum QRegularExpression_MatchOption
{
	NoMatchOption = 0,
	AnchorAtOffsetMatchOption = 1,
	AnchoredMatchOption = 1,
	DontCheckSubjectStringMatchOption = 2,
}
[AllowDuplicates]
enum QRegularExpression_WildcardConversionOption
{
	DefaultWildcardConversion = 0,
	UnanchoredWildcardConversion = 1,
}